--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "axios": "^0.18.0",
     "babel": "^6.23.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "bootstrap": "^4.3.1",
     "eslint": "^5.15.1",
@@ -36,14 +40,17 @@
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-redux": "^4.0.8",
+    "react-stripe-elements": "^2.0.3",
     "reactstrap": "^7.1.0",
     "sass": "^1.17.2",
+    "stripe": "^6.27.0",
     "styled-components": "^4.1.3"
   },
   "dependencies": {
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "components": "^0.1.0",
+    "pages": "^0.0.16",
     "react-router-dom": "^4.3.1",
     "static": "^2.0.0"
   }
